docs(security): revise ACL hardening plan per Codex plan review
Folds in 5 findings: (1) invalid-owner repair now full-reindexes to clear
stale submitterUserId, not just viewUsers=[]; (2) Collaboration postDelete
trigger added; (3) concrete revocation-trigger sites + Role/Organization
lifecycle hooks; (4) test helper uses User(uuid) ctor (no setId); (5)
multi-org + orgAdmin-with-collabs equivalence test cases. Bounds the
full-reindex denial window.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>